Fix Header SVG Overflow

--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -207,18 +207,17 @@ header > span:last-of-type {
 }
 
 .custom-shape-divider-top-1646919682 {
-  margin: 0 auto;
   position: absolute;
-  width: 100%;
-  min-width: 1250px;
   overflow: hidden;
+  width: 100%;
   line-height: 0;
   margin-top: -0.5rem;
 }
 .custom-shape-divider-top-1646919682 svg {
   position: relative;
   display: block;
-  width: calc(115% + 1.3px);
+  width: 100%;
+  min-width: 1250px;
   height: 100px;
 }
 .custom-shape-divider-top-1646919682 .shape-fill {
